--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             var first_name = "Umang ";
             var last_name = "Sharma";
             console.log(first_name.concat(last_name));
-            var a = "10";
-            var b = "5";
+            var a = 10;
+            var b = 5;
             var add = a + b;
             console.log(add);
             var subtract = a - b;
